feat: Add project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=oscar_app_back
+spring.datasource.url=jdbc:postgresql://localhost:5432/oscar_app
+spring.datasource.username=postgres
+spring.datasource.password=N&71_h0095
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
